# Debouncer

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  clang-format.sh
.github/workflows/: cmake.yml
Doc/: Doxyfile
Doc/html/: _debounce_8c.html  _debounce_8c.js  _debounce_8c__incl.md5  _debounce_8c_a7a59809141df174b2e71170dabb50e49_cgraph.md5  _debounce_8c_a7a59809141df174b2e71170dabb50e49_icgraph.md5  _debounce_8c_ad9dcccf9d236f87f6ad953d552b73140_cgraph.md5  _debounce_8c_ad9dcccf9d236f87f6ad953d552b73140_icgraph.md5  _debounce_8c_ae3d29fc2410037063297eb5aebda8691_icgraph.md5  _debounce_8h.html  _debounce_8h.js  _debounce_8h__incl.md5  _debounce_8h_a0d963721b45ca7cdbf02c3e40c7bd08c_cgraph.md5  _debounce_8h_a0d963721b45ca7cdbf02c3e40c7bd08c_icgraph.md5  _debounce_8h_ae6274842b4903ad0c6a62afff0b2b194_icgraph.md5  _debounce_8h_source.html  _main_8c.html  _main_8c.js  _main_8c__incl.md5  _main_8c_a94efd6927674647f53d9e677033c4896_icgraph.md5  _main_8c_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  _user_config_8h_source.html  _version_8h.html  _version_8h__incl.md5  _version_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_000002_000001.html  dir_5964a3ab804c10fd6745375a7094d60d.html  dir_5964a3ab804c10fd6745375a7094d60d.js  dir_5964a3ab804c10fd6745375a7094d60d_dep.md5  dir_a210e75a2e42c79929ca8b9738273917.html  dir_a210e75a2e42c79929ca8b9738273917.js  dir_a210e75a2e42c79929ca8b9738273917_dep.md5  dir_fe0309b8ed3ca17191609676fb4e843e.html  dir_fe0309b8ed3ca17191609676fb4e843e.js  dir_fe0309b8ed3ca17191609676fb4e843e_dep.md5  files.html  files_dup.js  functions.html  (+15 more)
Doc/html/search/: all_0.js  all_3.js  all_4.js  classes_0.js  enums_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  variables_1.js
Src/: CMakeLists.txt  Debounce.c  Main.c  UserConfig.h  Version.c.in
docs/: CMakeLists.txt  Doxyfile.in
inc/: Debounce.h  Version.h
tests/: CMakeLists.txt
tests/DebouncerTest/: CMakeLists.txt  DebouncerTest.c
